--- a/D2_D3.ipynb
+++ b/D2_D3.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "D2/D3.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMTGgGScMNmDgKsKR/wQF1t",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,8 +18,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Soumadeep10/RINEX-ML/blob/main/D2_D3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "yp5oB_fwgY-3"
       },
@@ -51,7 +63,7 @@
       "metadata": {
         "id": "mlCFJXc9lL1H"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +78,7 @@
         "id": "faJefEsdlidU",
         "outputId": "0b85edcb-8c3b-4761-9bb1-71d9f4f2cc87"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +102,7 @@
         "id": "pJqFTZE1loxz",
         "outputId": "3d0d20c1-64b9-4505-f761-f18ad6a7d31e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +126,7 @@
         "id": "jUw1hQOul4iN",
         "outputId": "724369fc-7399-4f44-d5d6-d1ac4f2bc504"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +148,7 @@
       "metadata": {
         "id": "r4peA7Gbl-HD"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +163,7 @@
         "id": "bQC6b9-QmMHX",
         "outputId": "1c6243b2-ffc1-4a84-ed85-4d0869da7f06"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +186,7 @@
         "id": "dhmF72D3mUiw",
         "outputId": "96ba56e8-37d4-4c44-b3f7-16d7a2b7a0af"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,7 +212,7 @@
         "id": "rjljOxKWmepI",
         "outputId": "7ac66541-701e-4126-dc7f-0a66eef6b2d4"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +238,7 @@
         "id": "nB40qoNymhXh",
         "outputId": "0fa9acc0-3796-4fad-da7d-6d7fdedbcf60"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +264,7 @@
         "id": "aG3H8TPhmj-q",
         "outputId": "32d18fa1-3350-4aa7-e03b-38daa4eed335"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +286,7 @@
       "metadata": {
         "id": "sXIooo2amnMe"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -289,7 +301,7 @@
         "id": "3dXFK-clm6jH",
         "outputId": "abf9ba09-feb6-4f3b-995e-4c8588fb966e"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +325,7 @@
         "id": "XkA1ZDR8nBUP",
         "outputId": "5fdee328-a69e-4ac0-82fa-202e01da1d7b"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -344,7 +356,7 @@
         "id": "RmbNteB6nGOH",
         "outputId": "95bdec6d-ad14-46fe-9ccc-a72d16a59f91"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +381,7 @@
         "id": "LP6UqLlhnybr",
         "outputId": "45a24338-e4cd-4e5e-f0a2-3dc88b001c23"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +410,7 @@
         "id": "55cF8cdTnkhS",
         "outputId": "17ad1fa0-3283-43c6-f93b-0858a88d5369"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +440,7 @@
         "id": "E04MuDdNoocE",
         "outputId": "bc67f06e-2773-448c-cd8d-19936245270a"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -465,7 +477,7 @@
         "id": "eUHS0ROepruA",
         "outputId": "05674bd0-8ebe-4d73-fa27-cf3c4190e3ce"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,7 +504,7 @@
         "id": "OfNg5z_NqVi3",
         "outputId": "2e32c383-1a81-40c7-ccc8-29c6a2d3d51d"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +535,7 @@
         "id": "2VhiPS8trZHB",
         "outputId": "61cadb7a-33d5-40b9-cc99-064a58210a20"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -553,7 +565,7 @@
         "id": "t4rvtANkrhMT",
         "outputId": "7d9d6305-5751-4960-d118-eeb5b9ab998c"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +596,7 @@
         "id": "M6zYf-0Kr0LM",
         "outputId": "ddac0925-4921-4030-a334-b128bfe47e5b"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -614,7 +626,7 @@
         "id": "h1ZV6oeSsKZB",
         "outputId": "37e3273a-3734-40d6-cf3a-158c5fff5afc"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +658,7 @@
         "id": "kjil3lfksNBy",
         "outputId": "844d949c-8431-41f7-fc9f-5853f0c99ae5"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -677,7 +689,7 @@
         "id": "e6WL7pYUs7tB",
         "outputId": "394a0171-5e0c-47e1-a17f-5957c1928a60"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -713,7 +725,7 @@
         "id": "dZ5dGUqYtTCv",
         "outputId": "ade45442-606a-4967-9e0b-9da2b95166e3"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -747,7 +759,7 @@
         "id": "oGWpF-33wu8G",
         "outputId": "9e537ef2-07ed-4099-970b-2929fcd7c440"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
